--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,15 @@ first div in the grid  and place it in the grid. */
 
 
 /* Add your media query here */
+@media only screen and (min-width:800px){
+  nav{
+
+    padding: 30px 0;
+    position:absolute;
+    right: 0
+
+  }
+}
 
 
   /* Step 9: Write the selector/rule property to style the nav element */
